# hbc-fp

./: .gitignore  flake.nix  pyproject.toml
.direnv/: flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa  flake-profile-a5d5b61aa8a61b7d9d765e1daf971a9a578f1cfa.rc
code/data_agg/: 60hz.py
code/data_transfer/: README.md  transfer.job  transfer_dry_run.job
code/tests/funcs/: gaf.ipynb
code/tests/funcs/.ipynb_checkpoints/: gaf-checkpoint.ipynb
docs/data_agg/: calc_sizes.sh  datafile_filtered.csv  find_match.py  matches.txt  sizes.txt  total_size.txt
