[project]
name = "hbc-final-project"
version = "0.1.0"
description = "Unsupervised accelerometer clustering"
authors = [
    {name = "Zak Gilliam",email = "zakgilliam@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pyts (>=0.13.0,<0.14.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
